--- a/resources/scss/components/contents/_index.scss
+++ b/resources/scss/components/contents/_index.scss
@@ -56,6 +56,15 @@
 					}
 				}
 			}
+
+			.entry-content {
+				.entry-anchor {
+					font-style: italic;
+					font-family: font-family( primary );
+					margin-left: -2.5rem;
+					margin-right: 1.250rem;
+				}
+			}
 		}
 
 		.page {
@@ -65,6 +74,14 @@
 				.entry-title {
 					margin: 0;
 					padding: 0;
+				}
+			}
+
+			.entry-content {
+				.entry-anchor {
+					font-style: italic;
+					margin-left: -2.5rem;
+					margin-right: 1.250rem;
 				}
 			}
 		}
