--- a/resources/scss/settings/colors/_index.scss
+++ b/resources/scss/settings/colors/_index.scss
@@ -1,15 +1,26 @@
 @function colors() {
 	@return (
-		aqua  : var( --aqua,   #00ffff),
-		black : var( --black,  #000000 ),
-		blue  : var( --blue,   #0000ff ),
-		maroon: var( --maroon, #800000 ),
-		navy  : var( --navy,  #000080),
-		olive : var( --olive,  #808000),
-		red   : var( --red,    #ff0000),
-		silver: var( --silver, #c0c0c0 ),
-		white : var( --white,  #ffffff ),
-		yellow: var( --yellow, #ffff00),
+		aqua    : var( --aqua,     #00ffff),
+		black   : var( --black,    #000000 ),
+		blue    : var( --blue,     #0000ff ),
+		coral   : var( --coral,    #ff7f50),
+		gold    : var( --gold,     #ffd700),
+		green   : var( --green,    #008000),
+		lavender: var( --lavender, #e6e6fa),
+		lime    : var( --lime,     #00ff00),
+		magenta : var( --magenta,  #ff00ff),
+		maroon  : var( --maroon,   #800000 ),
+		navy    : var( --navy,     #000080),
+		olive   : var( --olive,    #808000),
+		orange  : var( --orange,   #ffa500),
+		pink    : var( --pink,     #ffc0cb),
+		plum    : var( --plum,     #dda0dd),
+		red     : var( --red,      #ff0000),
+		salmon  : var( --salmon,   #fa8072),
+		silver  : var( --silver,   #c0c0c0 ),
+		teal    : var( --teal,     #008080),
+		white   : var( --white,    #ffffff ),
+		yellow  : var( --yellow,   #ffff00),
 	);
 }
 
