add more colors

--- a/resources/scss/components/contents/_index.scss
+++ b/resources/scss/components/contents/_index.scss
@@ -45,6 +45,8 @@
 
 				.entry-metadata {
 					.entry-author {
+						font-style: italic;
+
 						svg {
 							height: 1rem;
 							width: 1rem;
@@ -53,6 +55,8 @@
 					}
 
 					.entry-date {
+						font-style: italic;
+						
 						svg {
 							height: 1rem;
 							width: 1rem;
