--- a/resources/scss/components/navigations/social/_index.scss
+++ b/resources/scss/components/navigations/social/_index.scss
@@ -19,5 +19,27 @@
 // Imports all of the files needed for front-end output. Note that the order is
 // very specific and should typically not be changed.
 
-@import 'primary/index';
-@import 'social/index';
+.menu-social {
+    padding: 0 1.125rem 1.125rem 1.125rem;
+
+    .menu-items {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+
+      .menu-item {
+        display: inline-block;
+        padding: 0 0.4rem;
+
+          a {
+            border-bottom: none;
+
+            svg {
+              height: 1.5rem;
+              width: 1.5rem;
+            }
+          }
+      }
+    }
+}
